--- a/index.html
+++ b/index.html
@@ -4,6 +4,38 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Первый текст как первый малыш!</p>
+    <header>
+        <nav>
+            <a href="#">Кто я такой</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Курс по фронтэнду.<br>Версия 1.5</h1>
+        <p>Премиальный. Бутиковый. Практический.</p>
+        <section>
+            <h2>Кто я такой</h2>
+            <p>Меня зовут Евгений Родионов, и я учу людей фронтэнду.</p>
+            <p>Я руководил разработкой Рублёвки.ру и обучал команду, которая сейчас работает в Тинькофф, Рокетбанке, Ростелекоме и немецком Kairlon.</p>
+            <p>Я веду <a href="#">канал про фронтэнд в Телеграме</a>, пишу <a href="#">статьи на Медиуме</a> и выпускаю <a href="#">5-минутные видео на Ютубе</a>.</p>
+            <p>Хочу, чтобы в России были крутые интерфейсы. Я взращиваю крутых ребят, с которыми готов работать сам.</p>
+            <aside>Спроси у Жени, Ильи, Кости, Люды и Лизы.</aside>
+        </section>
+        <section>
+            <h2>Ченджлог к версии 1.5</h2>
+            <p>Я провел 4 потока и понял узкие места курса. Да, люди добивались своих целей — находили работу или запускают продукты, но сила трения была высокой, so every update of our Facebook app includes improvements for speed and reliability.<br>Bug fixer and performance improvements.</p>
+            <h3>Было</h3>
+            <ul>
+                <li>материалы готовились во время курса;</li>
+                <li>мало теории;</li>
+                <li>нестабильная программа;</li>
+            </ul>
+            <h3>Стало</h3>
+            <ul>
+                <li>макеты и АПИ сделаны до начала курса;</li>
+                <li>новые объясняющие видео;</li>
+                <li>программа не будет прыгать на ходу</li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
