--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Document</title>
+    <title>Курс по фронтэнду 1.5</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <a href="#">Кто я такой</a>
+    </nav>
     <header>
-        <nav>
-            <a href="#">Кто я такой</a>
-        </nav>
-    </header>
-    <main>
         <h1>Курс по фронтэнду.<br>Версия 1.5</h1>
         <p>Премиальный. Бутиковый. Практический.</p>
+    </header>
+    <main>
         <section>
             <h2>Кто я такой</h2>
             <p>Меня зовут Евгений Родионов, и я учу людей фронтэнду.</p>
