--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Курс по фронтэнду 1.5</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="normalize.css">
 </head>
 <body>
     <nav>
